fix: add z-index to popover component

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+[data-radix-popper-content-wrapper]{
+    z-index: 999 !important;
+}
